--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="background">
       <div class="wrapper">
         <!-- .clock ke image -->
-      <img src="http://clipart-library.com/images_k/alarm-clock-transparent-background/alarm-clock-transparent-background-12.png" alt="clock">
+      <img src="clock.png" alt="clock">
       <h1>00:00:00 PM</h1>
       <div class="content">
         <div class="column">
