--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Coding By Naman Jain - Namanj413@gmail.com -->
+<!-- Coding By Manasa Kolli - kollimanasa6@gmail.com -->
 <html lang="en" dir="ltr">
   <head>
     <link rel="shortcut icon" type="image/icon" href="bell-solid.svg">
